[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/weapons/muzzle flash.png" type="Texture" id=1]
[ext_resource path="res://Weapons/PumpAction.gd" type="Script" id=2]
[ext_resource path="res://Assets/weapons/pump shotgun.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sound_Effect/PUMP_SHOTGUN_SHOT.mp3" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sound_Effect/gun-reload-pump-action-shotgun-fascinatedsound-fast-2-2-00-01.mp3" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 100, 79 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 100, 0, 100, 79 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 79, 100, 79 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 100, 79, 100, 79 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "flash",
"speed": 7.0
} ]

[node name="PumpAction" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="muzzle_flash" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 1.42109e-14, -14 )
rotation = 4.71239
scale = Vector2( 0.06, 0.06 )
frames = SubResource( 5 )
animation = "flash"
frame = 2
playing = true

[node name="end_of_gun" type="Position2D" parent="."]
position = Vector2( 0, -16 )

[node name="Reload" type="Timer" parent="."]
wait_time = 1.2

[node name="ROF" type="Timer" parent="."]
wait_time = 0.8

[node name="muzzleFlash" type="Timer" parent="."]
wait_time = 0.2

[node name="shot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -16.605

[node name="pump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Pump" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="Reload" to="." method="_on_Reload_timeout"]
[connection signal="timeout" from="ROF" to="." method="_on_ROF_timeout"]
[connection signal="timeout" from="muzzleFlash" to="." method="_on_muzzleFlash_timeout"]
[connection signal="timeout" from="Pump" to="." method="_on_Pump_timeout"]
